@@ -205,6 +205,8 @@ common_probe_entryfn_prologue (translator_output* o, string statestr,
   o->newline() << "c->last_error = 0;";
   o->newline() << "c->nesting = 0;";
   o->newline() << "c->regs = 0;";
+  o->newline() << "c->unwaddr = 0;";
+  // reset unwound address cache
   o->newline() << "c->pi = 0;";
   o->newline() << "c->probe_point = 0;";
   if (! interruptible)
