@@ -1,3 +1,10 @@
+2008-04-04  Masami Hiramatsu <mhiramat@redhat.com>
+
+	PR 6028
+	* translate.cxx (c_unparser::emit_common_header): Add unwaddr for
+	caching unwound address.
+	* tapsets.cxx (common_probe_entryfn_prologue): Clear unwaddr.
+
 2008-04-01  Frank Ch. Eigler  <fche@elastic.org>
 
 	* safety/*: Removed subdirectory containing abandoned experiment.
